# llvm-analyze

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  COMPARISON_COMPLETE.md  EXAMPLE_RESULTS.md  PARALLELIZATION_PATTERNS_GUIDE.md  QUICK_START.md  README.md  REALWORLD_TESTING_GUIDE.md  REFACTOR_SUMMARY.md  RESULTS_SUMMARY.md  TROUBLESHOOTING.md  clean  comparison.md  dependency_test.cpp  explanation.md  generate_comparison_charts.py  generate_q1_report.py  generate_report_data.py  generate_summary.py  openmp_validation_demo.py  openmp_validation_implementation_complete.md  run.sh  run_ai_explain.sh  run_analysis_demo.py  run_validation.sh  sdk_helper.sh  setup.sh  show_summary.py  simple_summary.py  strategy.md  test_code_blocks.cpp  test_imports.py  test_layout.cpp  test_matrix.c  test_openmp.c  test_openmp_validation.py  test_optimization.cpp  test_reduction.c  (+3 more)
cache/: pattern_cache.json
llvm-pass/: AIEnhancedAnalysis.cpp  AIEnhancedAnalysis.h  AdvancedPatternDetect.cpp  AdvancedPatternDetect.h  CMakeLists.txt  HybridPatternAnalyzer.h  MinimalPass.cpp  ParallelCandidatePass.cpp  PatternDetect.cpp  PatternDetect.h  SimpleParallelCandidatePass.cpp
parallel-analyzer-service/: README.md
python/: ai_candidate_enhancer.py  ai_pattern_classifier.py  ai_pattern_discovery.py  ai_source_analyzer.py  groq_client.py  source_context_extractor.py
reports/: COMPARATIVE_ANALYSIS_FULL.md  COMPARISON_CHARTS.txt  EXECUTIVE_SUMMARY.md  INDEX_COMPARISON_REPORTS.md  PDF_GENERATION_GUIDE.md  PROFESSIONAL_REPORT.html  PROFESSIONAL_REPORT.md  PROFESSIONAL_REPORT_ONE_PAGER.md  Q1_PARALLEL_ANALYSIS_REPORT.txt  TRUST_VALIDATION_BRIEF.md  VALIDATION_GUIDE.md  academic_trustworthiness_report.md  architecture_snapshot.md  compile_report.sh  generate_html.py  hybrid_analysis_flow.html  hybrid_analyzer_report_complex_logic_loops_cpp.html  hybrid_analyzer_report_game_bullets_parallel_test_cpp.html  hybrid_analyzer_report_multi_deminsion_matrix_cpp.html  hybrid_analyzer_report_problematic_patterns_cpp.html  report_style.css  (+1 more)
(+539 files in other folders)
